Wed May 30 17:19:56 2012  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c (do_inflate):  Inflate more data if buffered data
	  exists.  Allows Zlib::Inflate#set_dictionary to work.
	  [ruby-trunk - Bug #5929]

Mon May 28 11:40:19 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_extract_modeenc): fail only if conflicting
	  text/binary modes given explicitly.  [ruby-dev:45268][Bug #6055]

Fri May 25 17:18:06 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_arglist): should reset lexical states after empty
	  argument list with no parenthesis as well as parenthesized list,
	  so that reserved name method definition work.  [ruby-dev:45626]
	  [Bug #6403]

Fri May 25 10:40:31 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* include/ruby/win32.h (FD_SET): change function to macro.
	  To avoid buffer overflow when smaller FD_SETSISE is used in ext
	  libraries.

	* win32/win32.c (rb_w32_fdset): this function is not used anymore.
	  But we leave this for compatibility.

	* win32/win32.c (rb_w32_select_with_thread): fix SEGV when smaller
	  FD_SETSISE is used in ext libraries. Dereference of fd_set pointer
	  causes SEGV.

	* test/-ext-/win32/test_fd_setsize.rb(TestFdSetSize): add tests for
	  above.
	* ext/-test-/win32/fd_setsize/depend: ditto.
	* ext/-test-/win32/fd_setsize/extconf.rb: ditto.
	* ext/-test-/win32/fd_setsize/fd_setsize.c: ditto.

	  [ruby-core:44588] [Bug #6352]

Fri May 25 10:38:06 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_strip_bom): check EOF.  [Bug #6487][ruby-core:45203]

Fri May 25 10:36:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_arglist): should reset lexical states after empty
	  argument list with no parenthesis as well as parenthesized list,
	  so that reserved name method definition work.  [ruby-dev:45626]
	  [Bug #6403]

Mon May 21 16:24:40 2012  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c (mSyslog_inspect): Use rb_sprintf().
