@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 233
+#define RUBY_PATCHLEVEL 234
 
-#define RUBY_RELEASE_DATE "2012-05-30"
+#define RUBY_RELEASE_DATE "2012-06-02"
 #define RUBY_RELEASE_YEAR 2012
-#define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 30
+#define RUBY_RELEASE_MONTH 6
+#define RUBY_RELEASE_DAY 2
 
 #include "ruby/version.h"
 
