@@ -1,3 +1,12 @@
+Sat Jun  2 18:49:39 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (rb_enc_cr_str_buf_cat): don't reset coderange as unknown.
+	  the condition 'ptr_a8 && str_cr != ENC_CODERANGE_7BIT' means not
+	  unknown, str is also ASCII-8BIT because str_encindex == ptr_encindex,
+	  and nont (str_cr == ENC_CODERANGE_UNKNOWN) and
+	  str_cr != ENC_CODERANGE_7BIT means str_cr is valid because ASCII-8BIT
+	  can't be broken. [ruby-dev:45688] [Bug #6509]
+
 Wed May 30 17:19:56 2012  Eric Hodel  <drbrain@segment7.net>
 
 	* ext/zlib/zlib.c (do_inflate):  Inflate more data if buffered data
